[package]
name = "koritsu-app"
version = "0.1.0"
authors = ["Thomas Himmelstoss <9889638+tfkhim@users.noreply.github.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/tfkhim/koritsu"
description = "A GitHub application to automate parts of the Koritsu workflow"

[dependencies]
axum = "0.8.3"
hyper = { version = "1.6.0", features = ["full"] }
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = "0.6.2"

[profile.release]
lto = true
