[package]
name = "koritsu-app"
version = "0.1.0"
authors = ["Thomas Himmelstoss <9889638+tfkhim@users.noreply.github.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/tfkhim/koritsu"
description = "A GitHub application to automate parts of the Koritsu workflow"

[dependencies]
axum = { version = "0.8.3", features = ["tracing"] }
hmac = "0.12.1"
hyper = { version = "1.6.0", features = ["full"] }
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1.3"

[profile.release]
lto = true
